# xserver-policy-enforcement

./: AUTHORS  COPYING  ChangeLog  Makefile.am  configure.ac  videoipc.pc.in
client/: Makefile.am  client.c
rpm/: 0001-Remove-usage-of-client-states-that-have-been-dropped.patch  0002-swaps-and-swapl-take-only-one-argument-anymore.patch  make-the-verbosity-level-of-trace-messages-higher.patch  noauth-for-root.patch  xserver-policy-enforcement.changes  xserver-policy-enforcement.spec  xserver-policy-enforcement.yaml
src/: Makefile.am  authorize.c  authorize.h  client.c  client.h  ipc.c  ipc.h  policy.c  policy.conf  policy.h  videoipc.h  winprop.c  winprop.h  xrandr.c  xrandr.h  xvideo.c  xvideo.h
